[project]
name = "oap-vercel"
version = "0.1.0"
description = "Using Vercel with FastAPI for openAI proxy"
authors = [
    {name = "Lyon", email = "lyon@mirabugs.com"},
]
dependencies = [
    "fastapi>=0.111.0",
    "aiohttp>=3.9.5",
    "loguru>=0.7.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
